@@ -1,3 +1,11 @@
+2003-05-08  Ion Badulescu  <ion@guppy.limebrokerage.com>
+
+	* libamu/mount_fs.c (compute_automounter_mount_flags): use
+	MNT2_GEN_OPT_AUTOMNTFS if available; minor cleanup
+
+	* m4/macros/header_templates.m4: added template for
+	MNT2_GEN_OPT_AUTOMOUNTED
+
 2003-05-01  Ion Badulescu  <ionut@nicu.badula.org>
 
 	* amd/ops_xfs.c (mount_xfs): compile fix (s/genflags/flags/)
